samples/evangelist/init/spec/soa-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: soa-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - grafana.example.info
    - servicegraph.example.info
    - tracing.example.info
    - mock.example.info
    - solr.example.info
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      privateKey: /etc/istio/ingressgateway-certs/tls.key
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
